pkg/tests/testthat/errors/test_nesting1.R
library(isismdl)
library(testthat)

#mdl <- islm_mdl("mdl/nesting1")
